2009-02-06  Andreas Kupries  <andreask@activestate.com>

	* library/vfs.tcl.in: New file encapsulating the package load
	process. Cleaner than the loadvfs proc, and much more suitable for
	conversion to a teabag.

	* pkgIndex.tcl.in: Cleaned up the declarations for package 'vfs'.
	Removed the 'vfslib' package, it never was such.
	
	* Makefile.in: Added installation of library/vfs.tcl.
	* configure.in: Added library/vfs.tcl.in.
	* configure: Regenerated.

	* win/makefile.vc: Updated the windows build file to configure
	vfs.tcl.in, and install vfs.tcl.

2009-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/vfslib.test: Make use of the core zlib and refchan features
	* pkgIndex.tcl.in:   by default for Tcl 8.6.

	* win/makefile.vc:  Updated windows build files
	* win/rules.vc:
	* win/nmakehlp.c:

	* tests/*.test: Tidied up the tests. Added lots of zipfs tests.
	
	* library/zipvfs.tcl: Applied patch from [Bug 1011492] to ensure
	we handle zipfiles with a prefix block robustly.

2009-01-21  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl.in: Incremented version of vfs::zip
	* library/zipvfs.tcl (zip::EndOfArchive): Fixed Schelte Bron's
	[Bug 2256740]. Trigger on outermost magic sequence, not an inner
	sequence from a n uncompressed zip archive stored in the zip.

2008-12-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/mk4vfs.tcl: Fix vfs::zstream to support 8.6 core zlib
	* library/vfslib.tcl:

2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/zipvfs.tcl: Cleaned up the zip stream read function to
	conform to the published specification more closely and avoid
	excess calls to the stat function.
	* pkgIndex.tcl.in: Incremented version of vfs::zip

2008-12-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: change VPATH to ensure that configure munging of
	VPATH when configuring in the main directory does not break it.
	[Bug 2389466]

2008-12-03  Jeff Hobbs  <jeffh@ActiveState.com>
